Modified custom.css to correctly position the background and shooting stars in the z-plane behind the photos. Projects section still has stars going in front.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,9 +3,9 @@ background: none !important;
 filter: progid:none !important;
 }
 
-#background { height:600px; width:99%; height:95%; z-index:0;}
+#background { position:fixed; height:600px; width:99%; height:95%; z-index:-10;}
       .stars {
-        position: absolute; /* width: 420em; height: 70em; */
+        z-index:inherit;
         background-image: url( http://www.14denoviembre.es/img/hori.png ), url( http://www.14denoviembre.es/img/stars_5.png );
         background-repeat: repeat;
         transform:translate3D(0em, 0em, 0);
@@ -14,6 +14,13 @@ filter: progid:none !important;
 }
 
 #foreground{
-    z-index=1;
+    z-index:1;
 }
 
+#projects-section{
+    z-index:1;
+}
+
+#screenshot-carousel{
+    z-index:1;
+}
